# CPU-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
naive/: main.cpp
naive/include/: ALU.hpp  memory.hpp
simulator/: featuretest.cpp  main.cpp
simulator/include/: ALU.hpp  control.hpp  memory.hpp
tomasulo/: main.cpp
tomasulo/include/: ALU.hpp  ArrDeque.hpp  IF.hpp  control.hpp  memory.hpp
