cmake_minimum_required(VERSION 3.12)
Project(CPU-Simulator-2025)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -fsanitize=address -fsanitize=undefined -fsanitize=leak")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_compile_definitions(_DEBUG)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/naive/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/RISC-V-Simulator-Template/include)
set(SOURCES 
  ${CMAKE_CURRENT_SOURCE_DIR}/naive/main.cpp
)
add_executable(code ${SOURCES})